--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <section>
         <h4>My Classes</h4>
-        <div class="card">
+        <div class="card program">
           <img src="https://platodev.s3.amazonaws.com/system/program_images/74/main/SSA_FP_G4_lg_icon.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJIZ4DPLFDIZOPMCA%2F20180926%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20180926T202310Z&X-Amz-Expires=604800&X-Amz-SignedHeaders=host&X-Amz-Signature=45a248c58b2ed36b4bee9282f02e6ea8a9a7b7fd88d78f39a49ddc6737520d7d">
 
           <h5>Social Studies Alive! Florida and its People</h5>
